[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/objects.png" type="Texture" id=1]
[ext_resource path="res://src/objects/cosmetic/GreenTwigs.gd" type="Script" id=2]
[ext_resource path="res://addons/network-sync-rollback/NetworkTimer.gd" type="Script" id=3]
[ext_resource path="res://addons/network-sync-rollback/NetworkAnimationPlayer.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Dissolve"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="GreenTwigs" type="SGFixedNode2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 596, 644, 52, 44 )

[node name="Timer" type="Node" parent="."]
script = ExtResource( 3 )
one_shot = true
wait_ticks = 1800

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dissolve = SubResource( 1 )
anims/RESET = SubResource( 2 )
script = ExtResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
